# claude-kit

./: .gitignore  CLAUDE.md  README.md  install.sh
board/: .dockerignore  Dockerfile  docker-compose.yml  requirements.txt
board/app/: __init__.py  chat.py  chat_daemon.py  crud.py  database.py  event_queue.py  main.py  models.py  schemas.py  seed.py  token_collector.py
board/frontend/: index.html  package-lock.json  package.json  vite.config.js
board/frontend/src/: App.jsx  index.css  main.jsx
board/frontend/src/components/: Empty.jsx  Layout.jsx  Sidebar.jsx  Spinner.jsx  TagBadge.jsx  TeamDot.jsx
board/frontend/src/contexts/: ThemeContext.jsx  ToastContext.jsx
board/frontend/src/hooks/: useApi.js  useFileAutocomplete.js
board/frontend/src/pages/: Admin.jsx  Board.jsx  BoardList.jsx  Chat.jsx  Dashboard.jsx  (+4 more)
board/mcp/: sse_server.py
docs/: deploy-guide.md
law/: .env.example  GUIDE.md  build.sh  docker-compose.yml  setup.sh
law/docker/: Dockerfile.backend  Dockerfile.frontend  cython_compile.py  nginx.conf
law/lawear/: lawear-debug.apk
mcp-servers/android-cdp/: README.md  pyproject.toml
mcp-servers/android-cdp/src/: server.py
mcp-servers/eh-qa-mcp/: pyproject.toml
mcp-servers/elkhound-qa/: README.md  pyproject.toml
mcp-servers/elkhound-qa/src/: server.py
scripts/: backup.sh  health-check.sh  import.sh  migrate-from-board.sh  uninstall.sh
sdk/: pyproject.toml
sdk/claude_core/: __init__.py  __main__.py  models.py
sdk/claude_core/ai/: __init__.py  base.py  cli.py  cost.py  daemon_adapter.py  dual.py  errors.py
sdk/claude_core/daemon/: __init__.py  base.py  chat_binder.py  claude.py  config.py  manager.py  models.py  pool.py  status_router.py
sdk/claude_core/memory/: __init__.py  config.py  maintenance.py  models.py  search.py  service.py  storage.py  write_gate.py
sdk/claude_core/utils/: __init__.py  json_repair.py
skills/my-ppt/: README.md  my-ppt.md  setup.sh
sysmon/: README.md  pyproject.toml
sysmon/sysmon/: __init__.py  actions.py  analyzer.py  cli.py  router.py  server.py
sysmon/sysmon/collectors/: __init__.py  base.py  darwin.py  linux.py
sysmon/sysmon/data/: process_desc.json
sysmon/sysmon/static/: index.html
sysmon/tests/: test_actions.py  test_analyzer.py  test_collectors.py  test_process_desc.py  test_server.py
(+5 files in other folders)
