[project]
name = "android-cdp-mcp"
version = "0.1.0"
description = "Android WebView 앱 자동 QA — adb + Chrome DevTools Protocol MCP 서버"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "websocket-client>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
android-cdp-mcp = "src.server:main"
