[project]
name = "elkhound-qa-mcp"
version = "0.1.0"
description = "ElkHound 웹서비스 QA 자동화 MCP 서버"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
elkhound-qa-mcp = "src.server:main"
